* …

For notes on 1.41.x and older releases, see HISTORY.

=== Configuration changes for system administrators in 1.42 ===
* …

==== New configuration ====
* $wgEditRecoveryExpiry: Number of seconds to keep edit recovery data
  after the edit is stored.
* …

==== Changed configuration ====
* …

==== Removed configuration ====
* $wgDisableCookieCheck has been removed.
* …

=== New user-facing features in 1.42 ===
* …

=== New features for sysadmins in 1.42 ===
* …

=== New developer features in 1.42 ===
* …

=== External library changes in 1.42 ===

==== New external libraries ====
* Added mediawiki/json-codec at v2.2.1
* …

===== New development-only external libraries =====
* …

==== Changed external libraries ====
* Updated OOUI from v0.48.1 to v0.48.2.
* Updated codex, codex-design-tokens and codex-icons
  from v1.0.0 to v1.0.1.
* …

===== Changed development-only external libraries =====
* Upgraded QUnit from v2.19.4 to v2.20.0.
* …

==== Removed external libraries ====
* …

=== Bug fixes in 1.42 ===
* …

=== Action API changes in 1.42 ===
* APIQueryTags now includes "software" in the "source" array for software
  generated tags. Reliance on the "extension" entries in this array is now
  deprecated, but they will remain for backwards compatibility.
* …

=== Action API internal changes in 1.42 ===
* …

=== Languages updated in 1.42 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* …

=== Breaking changes in 1.42 ===
* UserRightsProxy, deprecated since 1.38, has been removed.
* UserLoginCompleteHook is always called with its $direct parameter set to
  boolean true. The false case has been removed.
* MagicWord::load() has been marked @internal and may change in the future
  without further notice.
* MediaWiki's virtualrest internal library has been removed in favor of the