@@ -7087,20 +7087,6 @@ config-schema:
             may have a variable number of work items, as is the case with batch jobs.
             This is used by runJobs.php and not jobs run via $wgJobRunRate.
             These settings should be global to all wikis.
-    JobSerialCommitThreshold:
-        default: false
-        type:
-            - number
-            - boolean
-        description: |-
-            Make job runners commit changes for replica DB-lag prone jobs one job at a time.
-            This is useful if there are many job workers that race on replica DB lag checks.
-            If set, jobs taking this many seconds of DB write time have serialized commits.
-            Note that affected jobs may have worse lock contention. Also, if they affect
-            several DBs at once they may have a smaller chance of being atomic due to the
-            possibility of connection loss while queueing up to commit. Affected jobs may
-            also fail due to the commit lock acquisition timeout.
-            @since 1.26
     JobTypeConf:
         default:
             default: { class: JobQueueDB, order: random, claimTTL: 3600 }
